deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: relay
  labels:
    app.kubernetes.io/name: relay
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: relay
    app.kubernetes.io/component: server
